[package]
name = "libffi"
version = "0.7.1-alpha.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Rust bindings for libffi"
repository = "https://github.com/tov/libffi-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["ffi", "libffi", "closure", "c"]
categories = ["development-tools::ffi"]

[badges]
travis-ci = { repository = "tov/libffi-rs" }

[features]
complex = []

[dependencies]
libffi-sys = { git = "https://github.com/tov/libffi-sys-rs" }
abort_on_panic = "2.0.0"
libc = "0.2.11"
